Support Java 11 syntax on Windows